--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>useGradleAndMaps</name>
-	<comment>Project useGradleAndMaps created by Buildship.</comment>
+	<name>porcodio</name>
+	<comment>Project porcodio created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
